force-app/main/default/objects/ServiceAppointment/fields/ModelName__c.field-meta.xml
<CustomField>
    <fullName>ModelName__c</fullName>
    <label>Model Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>