force-app/main/default/objects/ServiceAppointment/fields/ShowRoom__c.field-meta.xml
<CustomField>
    <fullName>ShowRoom__c</fullName>
    <formula>ServiceTerritory.Name</formula>
    <label>Show Room</label>
    <type>Text</type>
</CustomField>